# ingombro

./: .gitignore  IDEAS.md  LICENSE  MIGRATION_PLAN.md  README.md  RELEASE_NOTES.md  TASK.md  electrobun.config.ts  icon.icns  index.html  package.json  tsconfig.json
.github/: release.yml
.github/workflows/: release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cache.rs  cleanables.rs  commands.rs  entry_info.rs  lib.rs  main.rs  scanner.rs  settings.rs  stats.rs  types.rs
src/bun/: index.ts
src/mainview/: i18n.ts  index.css  index.html  index.ts
src/mainview/i18n/: de.ts  en.ts  es.ts  fr.ts  it.ts  ja.ts  pt.ts  types.ts
