[package]
name = "ingombro"
version = "1.0.0"
description = "Disk space analyzer and cleaner"
authors = ["David Nussio"]
edition = "2021"

[lib]
name = "ingombro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flate2 = "1"
glob = "0.3"
trash = "5"
walkdir = "2"
chrono = "0.4"
dirs = "6"
tokio = { version = "1", features = ["sync"] }
